--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://s-media-cache-ak0.pinimg.com/564x/6c/f4/25/6cf4259e4b539bdca7b9ed1d7751e480.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>0
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://s-media-cache-ak0.pinimg.com/564x/6c/f4/25/6cf4259e4b539bdca7b9ed1d7751e480.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -42,5 +42,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets\vendor\jquery\jquery.min.js"></script>
+    <script src="assets\vendor\bootstrap\js\bootstrap.bundle.min.js"></script>
+    <script src="assets\vendor\jquery.easing\jquery.easing.min.js"></script>
+    <script src="assets\vendor\php-email-form\validate.js"></script>
+    <script src="assets\vendor\waypoints\jquery.waypoints.min.js"></script>
+    <script src="assets\vendor\counterup\counterup.min.js"></script>
+    <script src="assets\vendor\isotope-layout\isotope.pkgd.min.js"></script>
+    <script src="assets\vendor\venobox\venobox.min.js"></script>
+    <script src="assets\vendor\owl.carousel\owl.carousel.min.js"></script>
+    <script src="assets\vendor\typed.js\typed.min.js"></script>
+    <script src="assets\vendor\aos\aos.js"></script> -->
+   
   </body>
 </html>
